style: :art: Suppress Spotbugs